# guardrails

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  flake.nix  result
.github/workflows/: ci.yml
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs
crates/tunables/: Cargo.toml  TUNABLES.md
crates/tunables/examples/: gpu_bench.rs
crates/tunables/src/: lib.rs
docs/: CONVENTIONS.md
gates/: adr-matrix.sh  ci-shim.sh  derived-docs.sh  no-commented-code.sh  no-conflict-markers.sh  no-debug-leftovers.sh  no-fake-impl.sh  no-hardcoded.sh  no-raw-trace-fields.sh  numerical-obligation.sh  perf-budget.sh  perf-record.sh  test-adr-matrix.sh  test-gates.sh
hooks/: bootstrap-pre-commit.sh
templates/default/: .envrc  .pre-commit-config.yaml  README.md  ci.yml  deny.toml  flake.nix  numerical-obligation.toml  perf-budgets.toml
tools/: freshness-nudge.sh  freshness-refresh.sh  freshness.sh  guardrails.sh
