[package]
name = "guardrails-trace"
version = "0.1.0"
edition = "2021"
publish = false  # internal/git-dep crate, not for crates.io
description = "One-call observability spine: EnvFilter + structured local JSONL (debug · perf-spans · audit · product trace)."

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
